# DCSflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
example/: EXAMPLE.md
example/1-relax/: dftb_in.hsd  geo_end.gen
example1/: EXAMPLE.md
example2/: EXAMPLE.md
example3/: EXAMPLE.md
example4/: EXAMPLE.md
src/dcsflow/: __init__.py  dftb.py  main.py  oclimax.py  phonons.py  restart_collector.py  restart_dftbmd.py  utils.py  vasp.py  workflow.py
